--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="images/search.png"></button>
+        </div>
+    </div>
+
 
     <script src="js/index.js"></script>
 </body>
